// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input.Password should change type to text when click on icon 1`] = `
<div
  class="css-1i5hjp5"
>
  <input
    aria-label="password"
    class="css-tws2u3"
    type="text"
  />
  <span
    class="css-1hbtery"
  >
    <span
      aria-label="visibility-icon"
      class="css-xbmx3s"
    >
      <span />
    </span>
  </span>
</div>
`;

exports[`Input.Password should render the input element with type password 1`] = `
<div
  class="css-1i5hjp5"
>
  <input
    aria-label="password"
    class="css-tws2u3"
    type="password"
  />
  <span
    class="css-1hbtery"
  >
    <span
      aria-label="visibility-icon"
      class="css-xbmx3s"
    >
      <span />
    </span>
  </span>
</div>
`;
